# FactorialFunction

./: CMakeLists.txt  README.md  buildInfo.mat  factNum.c  factNum.h  factNum_initialize.c  factNum_initialize.h  factNum_terminate.c  factNum_terminate.h  factNum_types.h  main.c  main.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
